fix spinner alignment

--- a/style.css
+++ b/style.css
@@ -751,7 +751,8 @@ top: 8px
 
 .video-cam-spinner {
 	position: absolute;
-    left: calc(25% + 82px);
+    left: 50%;
+    transform: translate(-50%, 0);
     top: 30%;
 }
 
